--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.cyanilux.shadergraph-customlighting": "https://github.com/Cyanilux/URP_ShaderGraphCustomLighting.git",
     "com.unity.collab-proxy": "1.15.7",
     "com.unity.ide.rider": "3.0.9",
     "com.unity.ide.visualstudio": "2.0.12",
